name:                toy1
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Toy, Toy.Cluster
  build-depends:       base >= 4.7 && < 5
                     , iproute
                     , containers
                     , iproute
                     , network
  default-language:    Haskell2010

executable toy1
  hs-source-dirs:      app
  main-is:             Toy1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base
                     , toy1
  default-language:    Haskell2010

test-suite toy1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src, test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , HUnit
                     , iproute
                     , network
                     , toy1
                     , unix

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
